--- a/vignettes/Week2_Spatial_Data/Week2_vignette.Rmd
+++ b/vignettes/Week2_Spatial_Data/Week2_vignette.Rmd
@@ -54,21 +54,12 @@ We will extract values at sampling point locations and within a local neighborho
 require(sp)
 require(raster)
 require(GeNetIt)
-require(landscapemetrics) # for landscape metrics
-require(tibble)
-require(dplyr) # should already be imported by landscapemetrics
 ```
 
 Package 'tmaptools' not automatically installed with 'LandGenCourse':
 
 ```{r message=FALSE, warning=TRUE}
 if(!require(tmaptools)) install.packages("tmaptools")
-```
-
-To use all the newest features, you will need the development version of `landscapemetrics v0.3`.
-
-```{r}
-devtools::install_github("r-spatialecology/landscapemetrics")
 ```
 
 ## 2. Import site data from .csv file
@@ -84,7 +75,7 @@ data(ralu.site)
 class(ralu.site)
 Sites <- data.frame(ralu.site@coords, ralu.site@data)
 class(Sites)
-as.tibble(Sites)
+head(Sites)
 ```
 
 To illustrate importing spatial data from Excel, here we export the data as a csv file, import it again as a data frame, then convert it to a SpatialPointsDataFrame. First we create a folder 'output' if it does not yet exist. 
@@ -110,7 +101,6 @@ Note: the tilde symbol '~' (here before the first coordinate) is often used in R
 ```{r}
 Sites.sp <- Sites
 coordinates(Sites.sp) <- ~coords.x1+coords.x2
-as.tibble(Sites.sp)
 ```
 
 Now R knows these are spatial data and knows how to handle them. It does not treat the coordinates as variables anymore, hence the first column is now 'SiteName'.
@@ -147,7 +137,7 @@ slotNames(Sites.sp)
 Here are the first few lines of the coordinates:
 
 ```{r}
-as.tibble(Sites.sp@coords)
+head(Sites.sp@coords)
 ```
 
 And the proj4 string:
@@ -241,13 +231,24 @@ table(Sites.sp@data$nlcd)
 
 ## 4. Calculate landscape metrics
 
-We are going to use the package [`landscapemetrics`](https://r-spatialecology.github.io/landscapemetrics/). It is an `R` package for calculating landscape metrics in a tidy workflow (for more information see [here](https://www.tidyverse.org/]) and is basically a reimplementation of ['FRAGSTATS'](https://www.umass.edu/landeco/research/fragstats/fragstats.html). 
+We are going to use the package [`landscapemetrics`](https://r-spatialecology.github.io/landscapemetrics/). It is an R package to calculate landscape metrics in a tidy workflow (for more information about tidy data see [here](https://www.jstatsoft.org/article/view/v059i10/)). `landscapemetrics` is basically a reimplementation of ['FRAGSTATS'](https://www.umass.edu/landeco/research/fragstats/fragstats.html), which allows an integration into larger workflows within the R environment. The core of the package are functions to calculate landscape metrics, but also several auxiliary functions exit.
 
-There are three different levels for landscape metrics. Firstly, metrics can be calculated for each single patch (neighbouring cells of the same class). Secondly, metrics can be calculated for a certain class and lastly for the whole landscape. All these levels are implemented and easily accessible in `landscapemetrics`. 
+```{r, message=FALSE, warning=TRUE}
+require(landscapemetrics)
+require(dplyr)
+```
 
-The result of all landscape metrics functions is always an identical structured tibble. The first coloumn is the layer id (only interesting for e.g. a `RasterStack`). The second coloumn specifies the level ('patch', 'class' or 'landscape'). The third coloumn is the class id (`NA` on landscape level). The third coloumn is the patch id (`NA` on class- and landscape level). The fourth coloumn is the abbreviation of the metric and the last coloumn is the value.
+To facilitate an integration into larger workflows, `landscapemetrics` is based on the [`raster` package](https://CRAN.R-project.org/package=raster). To check if a raster is suitable for `landscapemetrics`, run the `check_landscape()` function first. The function checks the coordinate reference system (and mainly if units are in meters) and if the raster values are discrete classes. If the check fails, the calculation of metrics is still possible, however, especially metrics that are based on area and distances must be used with caution.
 
-All functions in landscapemetrics start with `lsm_` (for landscapemetrics). The second part of the name specifies the level (patch - `p`, class - `c` or landscape - `l`). The last part of the function name is the abbreviation of the corresponding metric (e.g. `enn` for the Euclidean nearest-neighbor distance). For all available metrics and more information about them see either the helpfile(s) or [here](https://r-spatialecology.github.io/landscapemetrics/reference/index.html). Additionally, you can use the `list_lsm()` function to show all metrics filtered by level, type or metric name. 
+```{r}
+nlcd <- raster(RasterMaps, layer = "nlcd")
+
+landscapemetrics::check_landscape(nlcd)
+```
+
+There are three different levels of landscape metrics. Firstly, metrics can be calculated for each single patch (a patch is defined as neighbouring cells of the same class). Secondly, metrics can be calculated for a certain class (i.e. all patches belonging to the same class) and lastly for the whole landscape. All these levels are implemented and easily accessible in `landscapemetrics`. 
+
+All functions to calculate metrics start with `lsm_` (for landscapemetrics). The second part of the name specifies the level (patch - `p`, class - `c` or landscape - `l`). Lastly, the final part of the function name is the abbreviation of the corresponding metric (e.g. `enn` for the Euclidean nearest-neighbor distance). To list all available metrics, you can use the `list_lsm()` function. The function also allows to show metrics filtered by level, type or metric name. For more information about the metrics, please see either the corresponding helpfile(s) or [https://r-spatialecology.github.io/landscapemetrics](https://r-spatialecology.github.io/landscapemetrics/reference/index.html).
 
 ```{r}
 landscapemetrics::list_lsm(level = "landscape", type = "diversity metric")
@@ -256,20 +257,11 @@ landscapemetrics::list_lsm(metric = "area")
 
 landscapemetrics::list_lsm(level = c("class", "landscape"), type = "aggregation metric", 
                            simplify = TRUE)
-
 ``` 
-
-To check if a raster is suitable for `landscapemetrics` run the check_lanscape() function first. It checks if the units are in meters, the classes are coded as integer values and if the values are (most likely) discrete classes.
-
-```{r}
-nlcd <- raster(RasterMaps, layer = "nlcd")
-
-landscapemetrics::check_landscape(nlcd)
-```
 
 ### a) Calculate patch-, class- and landscape level landscape metrics 
 
-To calculate a single metric, just use the corresponding function. 
+To calculate a single metric, just use the corresponding function. The result of all landscape metric functions is always an identical structured `tibble` (i.e. an advanced `data.frame`). The first coloumn is the layer id (only interesting for e.g. a `RasterStack`). The second coloumn specifies the level ('patch', 'class' or 'landscape'). The third coloumn is the class id (`NA` on landscape level) and the fourth coloumn is the patch id (`NA` on class- and landscape level). Lastly, The fith coloumn is the abbreviation of the metric and finally the corresponding value in the last coloumn.
 
 ```{r}
 # calculate percentage of landscape of class
@@ -278,7 +270,7 @@ percentage_class <- lsm_c_pland(landscape = nlcd)
 percentage_class
 ```
 
-Because the resulting tibble is type stable, you can easily rowbind different metrics (even of different levels). 
+Because the resulting `tibble` is type stable, you can easily rowbind different metrics (even of different levels). 
 
 ```{r}
 # calculate three different landscape metrics and rowbind the result to one result tibble
@@ -291,99 +283,114 @@ metrics <- rbind(
 metrics
 ```
 
-To calculate a larger set of landscape metrics, you can just use the wrapper `calculate_lsm()`. The arguments are similar to `list_lsm()`, e.g. you can specify the level or the type of metrics to calculate. Alternatively, you can also provide a vector with the function names of metrics to calculate to the `what` argument. However, watch out, for large raster and many metrics, this can be rather slow. 
+To calculate a larger set of landscape metrics, you can just use the wrapper `calculate_lsm()`. The arguments are similar to `list_lsm()`, e.g. you can specify the level or the type of metrics to calculate. Alternatively, you can also provide a vector with the function names of metrics to calculate to the `what` argument. However, watch out, for large raster and many metrics, this can be rather slow (set `progress = TRUE` to get an progress report on the console). Also, we suggest to not just calculate all available metrics, but rather think about which ones might be actually suitable for your research question.
 
 ```{r}
 # calculate all patch-level metrics using wrapper
-nlcd.patch <- landscapemetrics::calculate_lsm(landscape = nlcd, 
+nlcd_patch <- landscapemetrics::calculate_lsm(landscape = nlcd,
                                               level = "patch")
 
-nlcd.patch
+nlcd_patch
 
 # show abbreviation of all calculated metrics
-unique(nlcd.patch$metric)
+unique(nlcd_patch$metric)
 
 # calculate all aggregation metrics on landscape level
-nlcd.landscape.aggr <- landscapemetrics::calculate_lsm(landscape = nlcd, 
+nlcd_landscape_aggr <- landscapemetrics::calculate_lsm(landscape = nlcd, 
                                                        level = "landscape", 
                                                        type = "aggregation metric")
 
-nlcd.landscape.aggr 
+nlcd_landscape_aggr 
 
 # calculate specific metrics
-nlcd.subset <- landscapemetrics::calculate_lsm(landscape = nlcd, 
+nlcd_subset <- landscapemetrics::calculate_lsm(landscape = nlcd, 
                                                what = c("lsm_c_pladj", 
                                                         "lsm_l_pr", 
                                                         "lsm_l_shdi"))
 
-nlcd.subset
+nlcd_subset
 ```
 
-Because the metric names are only abbreviated, there is also a way to include the full name in the results. For the wrapper, just set `full_name = TRUE`. For the rowbinded tibble, you can use the provided tibble `lsm_abbreviations_names` that comes with the package and use e.g. `left_join()`. 
+The resulting `tibble` is easy to integrate into a workflow. For example, to get the ordered patch id of the 5% largest patches, the following code could be used.
+
+```{r}
+# the pipe operator %>% passes the resulting object automatically to the next function as first argument
+id_largest <- nlcd_patch %>% # previously calculated patch metrics
+  dplyr::filter(metric == "area") %>% # only patch area
+  dplyr::arrange(-value) %>% # order by decreasing size
+  dplyr::filter(value > quantile(value, probs = 0.95)) %>% # get only patches larger than 95% quantile
+  dplyr::pull(id) # get only patch id
+
+id_largest
+```
+
+Because the metric names are only abbreviated, there is also a way to include the full name in the results. For the wrapper, just set `full_name = TRUE`. For the rowbinded `tibble`, you can use the provided `tibble` called `lsm_abbreviations_names` that comes with the package and use e.g. `dplyr::left_join()` to combine it with your results. 
 
 ```{r}
 # add full metrics name to result
-nlcd.subset.full <- landscapemetrics::calculate_lsm(nlcd, 
-                                                    what = c("lsm_c_pladj", 
-                                                             "lsm_l_pr", 
-                                                             "lsm_l_shdi"), 
-                                                    full_name = TRUE)
+nlcd_subset_full_a <- landscapemetrics::calculate_lsm(nlcd, 
+                                                      what = c("lsm_c_pladj", 
+                                                               "lsm_l_pr", 
+                                                               "lsm_l_shdi"), 
+                                                      full_name = TRUE)
 
-# add full metrics name to result using left_join
-nlcd.subset.full.b <- dplyr::left_join(x = nlcd.subset,
+# add full metrics name to results calculated previously using left_join()
+nlcd_subset_full_b <- dplyr::left_join(x = nlcd_subset,
                                        y = lsm_abbreviations_names,
                                        by = c("metric", "level"))
 
-nlcd.subset.full
-nlcd.subset.full.b
+nlcd_subset_full_a
+nlcd_subset_full_b
 ``` 
 
 # b) Calculate patch-level landscape metrics for 'Evergreen Forest'
 
-To only get the results for class 42 (forest), you can just `filter()` the `tibble`. 
+To only get the results for class 42 (forest), you can just `dplyr::filter()` the `tibble` (or use any other subset method you prefer). 
 
 ```{r}
 # class == 42 for forest
-forest.patch.metrics <- dplyr::filter(nlcd.patch, class == 42)
+forest_patch_metrics <- dplyr::filter(nlcd_patch, class == 42)
 ```
 
-All functions make heavy use of connected components labeling to delineate patches (neighouring cells of the same class). To get all patches of every class you can just use `get_patches()`. To only get a certain class, just specify the `what` argument. You can choose between 8-neighbor rule or 4-neighbor rule.
+All functions make heavy use of connected components labeling to delineate patches (neighbouring cells of the same class). To get all patches of every class you can just use `get_patches()`. To get only a certain class, just specify the `class` argument and the neighbourhood rule can be chosen between 8-neighbour rule or 4-neighbour rule.
 
 ```{r}
 # connected components labeling of landscape
-cc.nlcd <- landscapemetrics::get_patches(nlcd, directions = 8)
+cc_nlcd <- landscapemetrics::get_patches(nlcd, directions = 8)
 
 # show name of each class
-sapply(cc.nlcd, function(x) names(x)) 
+sapply(cc_nlcd, function(x) names(x)) 
 
 # the fourth list entry is class forest
-cc.forest.a <- cc.nlcd[[4]]
-cc.forest.b <- landscapemetrics::get_patches(nlcd, class = 42) # watch out: result is list with one entry
+cc_forest_a <- cc_nlcd[4]
+cc_forest_b <- landscapemetrics::get_patches(nlcd, class = 42) # watch out: result is list with one entry
 
-cc.forest.a
-cc.forest.b
+cc_forest_a
+cc_forest_b
 ```
 
 To plot the patches you can use the `show_patches()` function.
 
 ```{r}
-  # show_patches(nlcd, class = "all", labels = FALSE)
-  show_patches(landscape = nlcd, class = 42, labels = FALSE)
+# patches of class 42 (forest) and 52 (shrubland)
+show_patches(landscape = nlcd, class = c(42, 52), labels = FALSE)
 ```
 
-It is also possible to visualize only the core area of each patch using `show_cores()`. The core area are all cells that are further away from the edge of each patch than a specified edge depth (e.g. 5 cells). 
+It is also possible to visualize only the core area of each patch using `show_cores()`. The core area is defined as all cells that are further away from the edge of each patch than a specified edge depth (e.g. 5 cells). 
 
 ```{r}
-  show_cores(landscape = nlcd, class = 42, edge_depth = 5,  labels = FALSE)
+# no core area for edge depth = 5 for class 52; try edge_depth = 1 for comparison
+show_cores(landscape = nlcd, class = c(42, 52), edge_depth = 5, labels = FALSE)
 ```
 
-Lastly, you can plot the map and fill each patch with the corresponding metric value, e.g. the patch size, with the help of `show_lsm()` 
+Lastly, you can plot the map and fill each patch with the corresponding metric value, e.g. the patch size, with the help of `show_lsm()` .
 
 ```{r}
-show_lsm(landscape = nlcd, class = 42, what = "lsm_p_area", labels = FALSE)
+# there are two very large patches in class 42
+show_lsm(landscape = nlcd, class = c(42, 52), what = "lsm_p_area", labels = FALSE)
 ``` 
 
-Let's add forest patch size to the 'Sites.sp' data. To extract landscape metrics of a patch in which sample points are located in, use `extract_lsm()`. Which metrics are extracted can be specified by the `what` argument (similar to `calculate_lsm()`). However, only patch level metrics are available.
+Let's add forest patch size to the 'Sites.sp' data. To extract landscape metrics of a patch in which sample points are located in, use `extract_lsm()`. Which metrics are extracted can be specified by the `what` argument (similar to `calculate_lsm()`). However, only patch level metrics are available. Please be aware, that the resulting `tibble` now has a new column, namely the id of the sample point (in the same order as the input points).
 
 ```{r}
 # extract patch area of all classes
@@ -401,8 +408,8 @@ Sites.sp@data$ForestPatchSize
 Plot a bubble map of forest patch size at each sampling location.
 
 ```{r fig.width=4.45, fig.height=4}
-par(mar=c(3,3,1,2))
-bubble(Sites.sp, "ForestPatchSize", fill=FALSE, key.entries=as.numeric(names(table(Sites.sp@data$ForestPatchSize))))
+par(mar = c(3,3,1,2))
+bubble(Sites.sp, "ForestPatchSize", fill = FALSE, key.entries = as.numeric(names(table(Sites.sp@data$ForestPatchSize))))
 ```
 
 ## 5. Sample landscape metrics in sampling plots
@@ -413,56 +420,55 @@ bubble(Sites.sp, "ForestPatchSize", fill=FALSE, key.entries=as.numeric(names(tab
 
 ```{r}
 # sample some metrics within buffer around sample location 
-nlcd.sampled <- landscapemetrics::sample_lsm(landscape = nlcd, 
-                                                 what = c("lsm_l_ta", 
-                                                          "lsm_c_np",
-                                                          "lsm_c_pland", 
-                                                          "lsm_c_ai"),
-                                                 shape = "square",
-                                                 points = Sites.sp, 
-                                                 size = 500)
+nlcd_sampled <- landscapemetrics::sample_lsm(landscape = nlcd, 
+                                             what = c("lsm_l_ta", 
+                                                      "lsm_c_np",
+                                                      "lsm_c_pland", 
+                                                      "lsm_c_ai"),
+                                             shape = "square",
+                                             y = Sites.sp, 
+                                             size = 500)
 
-nlcd.sampled
+nlcd_sampled
 ```
 
-The `tibble` now contains two additional columns. Firstly, the `plot_id` (in the same order as the input points) and secondly, the `percantge_inside` of the sample plot within the landscape. In cases in which the sample location is on the edge of the landscape, the sample plot could only be partly within the landscape. The value can also deviate from 100 % because the sample locations are not necessarily in the cell center and the actually clipped cells lead to a slightly smaller or larger sample area. A circle sample shape even increases this effect.
+The `tibble` now contains two additional columns. Firstly, the `plot_id` (in the same order as the input points) and secondly, the `percantge_inside` of the sample plot within the landscape. In cases in which the sample location is on the edge of the landscape, the sample plot could only be partly within the landscape. The value can also deviate from 100% because the sample locations are not necessarily in the cell center and the actually clipped cells lead to a slightly smaller or larger sample area. A circle sample shape increases this effect.
 
-It is also possible to get the clippings of the sample plots as a `RasterLayer`. Therefore, just set `return_plots = TRUE`.
+It is also possible to get the clippings of the sample plots as a `RasterLayer`. Therefore, just set `return_raster = TRUE`.
 
 ```{r}
 # sample some metrics within buffer around sample location and returning sample
 # plots as raster
-nlcd.sampled.plots <- landscapemetrics::sample_lsm(landscape = nlcd, 
-                                                       what = c("lsm_l_ta",
-                                                                "lsm_c_np",
-                                                                "lsm_c_pland",
-                                                                "lsm_c_ai"),
-                                                       shape = "square",
-                                                       points = Sites.sp, 
-                                                       size = 500, 
-                                                       return_plots = TRUE)
+nlcd_sampled_plots <- landscapemetrics::sample_lsm(landscape = nlcd, 
+                                                   what = c("lsm_l_ta",
+                                                            "lsm_c_np",
+                                                            "lsm_c_pland",
+                                                            "lsm_c_ai"),
+                                                   shape = "square",
+                                                   y = Sites.sp, 
+                                                   size = 500, 
+                                                   return_raster = TRUE)
 
-nlcd.sampled.plots
+nlcd_sampled_plots
 ```
 
-The result will be a nested `tibble` containing the `plot_id`, the metrics (as a `list`) and a `RasterLayer` with the clipped sample plot (as a `list`).
+The result will be a nested `tibble` containing the `plot_id`, the metrics and a `RasterLayer` with the clipped sample plot (as a `list`).
 
 ```{r, fig.width=8, fig.height=5.5}
 # show results for first four plots
-nlcd.sampled.plots$metrics[1:4]
-nlcd.sampled.plots$raster_sample_plots[1:4]
+nlcd_sampled_plots$raster_sample_plots[1:4]
 
 par(mfrow = c(2,2))
-  plot(nlcd.sampled.plots$raster_sample_plots[[1]], 
+  plot(nlcd_sampled_plots$raster_sample_plots[[1]], 
        main = paste(Sites.sp$SiteName[1]), 
        col = rev(rainbow(9)))
-  plot(nlcd.sampled.plots$raster_sample_plots[[2]],
+  plot(nlcd_sampled_plots$raster_sample_plots[[2]],
        main = paste(Sites.sp$SiteName[2]),
        col = rev(rainbow(9)))
-  plot(nlcd.sampled.plots$raster_sample_plots[[3]],
+  plot(nlcd_sampled_plots$raster_sample_plots[[3]],
         main = paste(Sites.sp$SiteName[3]), 
        col = rev(rainbow(9)))
-  plot(nlcd.sampled.plots$raster_sample_plots[[4]],
+  plot(nlcd_sampled_plots$raster_sample_plots[[4]],
         main = paste(Sites.sp$SiteName[4]), 
        col = rev(rainbow(9)))
 par(mfrow = c(1,1))
@@ -470,53 +476,70 @@ par(mfrow = c(1,1))
 
 ### b) Extract landscape metric of choice for a single cover type (as vector)
 
-To extract a metrics you can just `filter()` the resulting `tibble` and pull the `value` coloumn.
+To extract a metrics you can just `dplyr::filter()` the resulting `tibble` and pull the `value` coloumn.
  
 ```{r}
 # filter the results for class == 42 (forest) and pland (percentage) and pull
 # results as vector
-percentage.forest.500 <- dplyr::pull(dplyr::filter(nlcd.sampled, 
-                                                   class == 42, 
-                                                   metric == "pland"), value)
+percentage_forest_500_a <- dplyr::pull(dplyr::filter(nlcd_sampled, 
+                                                     class == 42, 
+                                                     metric == "pland"), value)
 
-percentage.forest.500
+# # same workflow, but using a pipe
+# percentage_forest_500_b <- nlcd_sampled %>% 
+#   dplyr::filter(class == 42, 
+#                 metric == "pland") %>% 
+#   dplyr::pull(value)
+
+percentage_forest_500_a
+# percentage_forest_500_b
 ```
 
 ### c) Extract landscape metric of choice for all cover types (as data frame). 
 
-To extract the landscape metric 'prop.landscape' for all cover types as a `tibble`, just `filter()` the `tibble` again, but only use the `metric` as filter. 
+To extract the landscape metric 'prop.landscape' for all cover types as a `tibble`, just `dplyr::filter()` the `tibble` again, but only use the `metric` as filter. 
 
 ```{r}
 # filter for percentage of landscape
-percentage.forest.500.df <- dplyr::filter(nlcd.sampled,
+percentage_forest_500_df <- dplyr::filter(nlcd_sampled,
                                           metric == "pland")
 
-percentage.forest.500.df
+percentage_forest_500_df
 ```
 
-The percent cover of all cover types should add up to ~ 100% (i.e., 1) for each site. We can check this with the function `summarize()`. First, we need to group the data using the `plot_id` and than sum all percentages.
+The percent cover of all cover types should add up to ~ 100% (i.e., 1) for each site. We can check this with the function `dplyr::summarize()`. First, we need to group the data using the `plot_id` and than sum all percentages.
 
 ```{r}
 # group by plot_id and sum all percentages
-pland.sum <- dplyr::summarize(dplyr::group_by(percentage.forest.500.df, by = plot_id), 
-                              sum_pland = sum(value))
+pland_sum_a <- dplyr::summarize(dplyr::group_by(percentage_forest_500_df, 
+                                                by = plot_id), 
+                                sum_pland = sum(value))
 
-pland.sum
+# # same workflow, but using a pipe
+# pland_sum_b <- percentage_forest_500_df %>% 
+#   dplyr::group_by(plot_id) %>% 
+#   dplyr::summarize(sum_pland = sum(value))
+
+pland_sum_a
+# pland_sum_b
 ```
 
 ### d) Extract all landscape metrics for a single cover type (as data frame)
 
-Just `filter()` for `class == 42` and add the sites names as coloumn to the resulting `tibble`.
+Just `dplyr::filter()` for `class == 42` and add the sites names as coloumn to the resulting `tibble`.
 
 ```{r}
 # filter for class == 42 (forest)
-forest.500.df <- dplyr::filter(nlcd.sampled,
+forest_500_df <- dplyr::filter(nlcd_sampled,
                                class == 42)
 
-# add site names to result
-forest.500.df$site_name <- Sites.sp$SiteName
+# data.frame with id and name of site
+SiteName_df <- data.frame(id = 1:length(Sites.sp$SiteName), site_name = Sites.sp$SiteName)
 
-forest.500.df
+# add site_name to metrics using plot_id and id of sampling sites
+forest_500_df <- dplyr::left_join(forest_500_df, SiteName_df, by = c("plot_id" = "id"))
+
+forest_500_df
 ```
 
 Done!
