Week 2: fixed proj4string assignment

--- a/vignettes/Week2_Spatial_Data/Week2_vignette.Rmd
+++ b/vignettes/Week2_Spatial_Data/Week2_vignette.Rmd
@@ -48,12 +48,12 @@ We will extract values at sampling point locations and within a local neighborho
 ### c) Required R libraries
 
 ```{r message=FALSE, warning=TRUE}
-require(LandGenCourse)
-require(sp)
-require(raster)
-require(GeNetIt)
-require(SDMTools) # for landscape metrics
-require(tibble)
+library(LandGenCourse)
+library(sp)
+library(raster)
+library(GeNetIt)
+library(SDMTools) # for landscape metrics
+library(tibble)
 ```
 
 Package 'tmaptools' not automatically installed with 'LandGenCourse':
@@ -115,13 +115,26 @@ For more information on CRS, see: https://www.nceas.ucsb.edu/~frazier/RSpatialGu
 We know that these coordinates are UTM zone 11 (Northern hemisphere) coordinates, hence we can use a helper function to find the correct 'proj4string', using function 'get_proj4' from the 'tmaptools' package. (For the Southern hemisphere, you would add 's' after the zone: "utm11s"). Here we call the function and the package simultaneously (this is good practice, as it helps keep track of where the functions in your code come from).
 
 ```{r}
-proj4string(Sites.sp) <- tmaptools::get_proj4("utm11")
+proj4string(Sites.sp) <- tmaptools::get_proj4("utm11")$proj4string
 ```
 
-If we had longitude and latitude coordinates, we would modify the command like this: 
-proj4string(Sites.sp) <- tmaptools::get_proj4("longlat"). 
+Note: this function only **declares** the existing projection, it does not change the coordinates to that projection. 
 
-### c) Access data in 'SpatialPointsDataFrame'
+If we knew the data to be in longitude and latitude coordinates, we would modify the command like this: 
+proj4string(Sites.sp) <- tmaptools::get_proj4("longlat")$proj4string. 
+
+### c) Change projection
+
+In case we needed to **transform** the projection from UTM zone 11 to longitude/latitude, we could create a new sp object 'Sites.sp.longlat'. We use the function 'spTransform' to change the projection from the projection of the old object 'Sites.sp' to the "longlat" coordinate system, which we define by the argument 'CRSobj'.
+
+```{r}
+Sites.sp.longlat <- sp::spTransform(Sites.sp, 
+                      CRSobj = tmaptools::get_proj4("longlat")$proj4string)
+head(Sites.sp.longlat@coords)
+```
+
+
+### d) Access data in 'SpatialPointsDataFrame'
 
 As an S4 object, Sites.sp has predefined slots. These can be accessed with the @ symbol:
 
